2007-09-15  higepon  <higepon@users.sourceforge.jp>

        * svn merge -r4606:HEAD mona-bohem ../trunk/mona

        * core/scheme: Now Boehm GC works well!

2007-09-14  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Added Boehm GC support. (not work)
                       svn merge -r4586:HEAD branches/scheme-quote/ branches/mona-bohem/core/scheme/

2007-09-10  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/Kernel.cpp : Added a tail recursive call optimization.
                                   svn merge -r4576:HEAD scheme-quote ../trunk/mona/core/scheme

2007-09-09  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdlib/qsort.c (qsort): Fixed bug of qsort.

2007-09-08  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Removed Asignment.cpp and added FOREACH_LIST.
                       svn merge -r4572:HEAD . ~/mona/core/scheme

        * core/scheme: Speed up, traditional macro, true S expression.
                       svn merge -r4499:HEAD scheme-quote ../trunk/mona/core/scheme

2007-08-30  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdio/fread.c (fread): Changed return value -1 to 0 when error.

        * core/monalibc/stdio/fgetc.c (fgetc): Changed return value check of fread.

2007-08-12  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/Translator.cpp (Translator::translateDefinitionMacro): Added define-macro.

2007-08-11  higepon  <higepon@users.sourceforge.jp>

        * core/scheme: Added quasiquote support.

2007-08-10  higepon  <higepon@users.sourceforge.jp>

        * Moved scheme-gc to mona/core/scheme.

2007-07-14  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/PageManager.cpp (PageManager::pageFaultHandler): Changed a stack over flow message.

        * core/scheme/test/pair.scm ("lambda's argument"): Added a test for lambda's arguments.

        * core/scheme/Procedure.cpp (Procedure::apply): Fixed a lambda's arguments bug.
